# gpupad

./: .gitignore  CMakeLists.txt  LICENSE.md  LICENSE_RtAudio.md  Learn.cpp  Learn.h  RController.cpp  RController.h  RDebug.cpp  RDebug.h  README.md  RImage.cpp  RJoystickEvent.h  RKeyEvent.h  RMainControl.cpp  RMainControl.h  RMouseEvent.h  RResource.cpp  RResource.h  RShader.cpp  RShader.h  RShaderProgram.h  RTexture.h  RWheelEvent.h  RWindow.cpp  RWindow.h  Redopera.pro  StackList.txt  Test.lua  Testctr.cpp  Testctr.h  Weiqi.cpp  Weiqi.h  WeiqiBoard.cpp  WeiqiBoard.h  WeiqiGoban.cpp  WeiqiGoban.h  character.cpp  character.h  config.json  (+16 more)
Redlib/: RAudioStream.cpp  RAudioStream.h  RColor.h  RController.cpp  RController.h  RDebug.cpp  RDebug.h  RFont.cpp  RFont.h  RFontLibrary.cpp  RFontLibrary.h  RFontTexture.cpp  RFontTexture.h  RImage.cpp  RImage.h  RInputEvent.cpp  RInputEvent.h  RInputModule.cpp  RInputModule.h  RInputRegistry.cpp  RInputRegistry.h  RJoiningThread.h  RJoystick.h  RJoystickEvent.h  RKeyEvent.h  RLayout.cpp  RLayout.h  RMaths.h  RMouseEvent.h  RNotifyEvent.cpp  RNotifyEvent.h  RObject.cpp  RObject.h  RPackFile.cpp  RPackFile.h  RPlane.cpp  RPlane.h  RPlant.cpp  RPlant.h  RPoint.cpp  (+38 more)
Redlib/RResource/: RCursor.cpp  RCursor.h  RFont.cpp  RFont.h  RImage.cpp  RImage.h  RLuaScript.cpp  RLuaScript.h  RMp3.cpp  RMp3.h  RResource.cpp  RResource.h  RShader.cpp  RShader.h  RShaderProgram.cpp  RShaderProgram.h  RTexture.cpp  RTexture.h  minimp3_implementation.cpp
Resource/: StackList.txt
Resource/shader/: Fragment.frag  LineBox.frag  LineBox.geom  LineBox.vert  Vertex.vert
example/: CMakeLists.txt  plane.cpp  texts.cpp  triangle.cpp
icon/: info-icons
include/: RAudioStream.h  RColor.h  RDebug.h  REvent.h  RFunction.h  RInputModule.h  RJson.h  RMaths.h  RMp3.h  RPoint.h  RResource.h  RSigslot.h  RThread.h  RThreadPool.h  RThreadQueue.h  RThreadStack.h  RedoperaConfig.h
include/dependents/: minimp3_ex.h
include/redopera/: RArea.h  RAudioStream.h  RColor.h  RContext.h  RController.h  RDebug.h  REvent.h  RFunction.h  RImage.h  RInfoWindow.h  RInputModule.h  RJson.h  RKeeper.h  RMath.h  RMp3.h  ROpenGL.h  RPlane.h  RPoint.h  RRect.h  RSigslot.h  RSize.h  RSprite.h  RTextbox.h  RThread.h  RThreadPool.h  RThreadQueue.h  RThreadStack.h  RTime.h  RTimer.h  RWindow.h
include/redopera/dependents/glad/: glad.h
include/redopera/resource/: RCursor.h  RFont.h  RImage.h  RLuaScript.h  RMp3.h  RResource.h  RShader.h
include/redopera/rsc/: RCursor.h  RFont.h  RImage.h  RLuaScript.h  RMp3.h  RPack.h  RResource.h  RShader.h  RShaderProg.h  RShaderProgram.h  RTexture.h
shader/: fragment.frag  vertex.vert
shaders/: fragment.frag  text.frag  texture.frag  vertex.vert
src/: CMakeLists.txt  MainWindow.cpp  MessageWindow.cpp  RArea.cpp  RAudioStream.cpp  RContext.cpp  RController.cpp  RCursor.cpp  RDebug.cpp  RFont.cpp  RGlobal.cpp  RImage.cpp  RInfoWindow.cpp  RInputModule.cpp  RLuaScript.cpp  RMp3.cpp  RPack.cpp  RPlane.cpp  RResource.cpp  RShader.cpp  RShaderProg.cpp  RShaderProgram.cpp  RSprite.cpp  RTextbox.cpp  RTexture.cpp  RThreadPool.cpp  RWindow.cpp
src/dependent/: SourceCodePro.cpp  glad.c  glad.cpp  implementation.cpp
src/dependent/glad/: glad.h
src/resource/: RMp3.cpp  RResource.cpp
src/tool/: RAudioStream.cpp  RDebug.cpp  RImage.cpp  RThreadPool.cpp
test/: CMakeLists.txt  font.cpp  glContext.cpp  opengl.cpp  share.cpp  sound.cpp  threads.cpp  unitTest.cpp  window.cpp
